2008-08-12  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-apply.c: (gnome_meta_theme_set): make sure we have a
	notification theme before trying to save it (bug #547448)

2008-08-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-apply.c: (gnome_meta_theme_set): if the metatheme loaded
	doesn't define a notification theme don't set it to "standard" (bug
	#546036)

2008-07-29  Jens Granseuer  <jensgr@gmx.net>

	* file-transfer-dialog.c: (file_transfer_job_destroy),
	(file_transfer_job_schedule), (file_transfer_dialog_copy_async):
	make the file transfer dialog work with GFiles instead gchar paths
	internally

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* capplet-util.c (directory_delete_recursive),
	(capplet_file_delete_recursive):
	* capplet-util.h: Move directory deletion helper function
	from the appearance capplet into a common directory

2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 533611 - add notification themes to the metatheme format

	* gnome-theme-apply.c: When applying a metatheme, apply
	the notification theme, too.

	* gnome-theme-info.h: Add a notification_theme_name field
	to the metatheme info struct.

	* gnome-theme-info.c: When reading a metatheme from a keyfile,
	handle notification themes.

2008-06-01  Thomas Wood  <thos@gnome.org>

	* capplet-util.c:
	* capplet-util.h:

	Remove some redundant and unused code

2008-05-24  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_read_meta_theme),
	(read_icon_theme), (read_cursor_theme), (read_cursor_fonts),
	(update_theme_index): return to using paths instead of URIs since
	most of the code using them expects paths

2008-05-18  Thomas Wood  <thos@gnome.org>

	* gconf-property-editor.c: (gconf_property_editor_class_init),
	(gconf_property_editor_get_prop): Allow the data property to be
	read as well as written.

2008-05-18  Jens Granseuer  <jensgr@gmx.net>

	* gconf-property-editor.c: (gconf_property_editor_init),