@@ -1,3 +1,15 @@
+2008-08-16  Jens Granseuer  <jensgr@gmx.net>
+
+	Keep track of hidden themes, too, so that e.g. we don't erroneously
+	show "GTK theme missing" when a metatheme references a hidden GTK
+	theme (part of bug #547301)
+
+	* gnome-theme-info.c: (gnome_theme_read_meta_theme),
+	(read_icon_theme), (read_cursor_theme): don't skip hidden themes,
+	initialize the hidden property
+	(gnome_theme_info_find_all_helper): only return non-hidden themes
+	* gnome-theme-info.h: add hidden property to all theme types
+
 2008-08-12  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-apply.c: (gnome_meta_theme_set): make sure we have a
